// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Core should construct Taproot Chain Swap details (cooperative: false) 1`] = `
{
  "cooperative": false,
  "internalKey": {
    "data": [
      79,
      116,
      188,
      134,
      116,
      226,
      51,
      153,
      148,
      125,
      11,
      1,
      187,
      104,
      52,
      43,
      223,
      18,
      54,
      179,
      21,
      219,
      29,
      205,
      37,
      50,
      50,
      123,
      165,
      233,
      202,
      166,
    ],
    "type": "Buffer",
  },
  "keys": {
    "__D": {
      "data": [
        158,
        253,
        210,
        149,
        243,
        182,
        182,
        187,
        202,
        178,
        82,
        36,
        31,
        70,
        42,
        25,
        207,
        79,
        11,
        112,
        73,
        117,
        217,
        187,
        4,
        124,
        224,
        39,
        83,
        178,
        85,
        19,
      ],
      "type": "Buffer",
    },
    "__DEPTH": 3,
    "__INDEX": 123,
    "__PARENT_FINGERPRINT": 2218617464,
    "__Q": undefined,
    "chainCode": {
      "data": [
        190,
        31,
        180,
        197,
        209,
        71,
        93,
        200,
        76,
        239,
        252,
        202,
        79,
        156,
        220,
        200,
        65,
        114,
        10,
        95,
        78,
        19,
        150,
        68,
        183,
        132,
        23,
        197,
        193,
        63,
        147,
        241,
      ],
      "type": "Buffer",
    },
    "lowR": false,
    "network": {
      "bech32": "bc",
      "bip32": {
        "private": 76066276,
        "public": 76067358,
      },
      "messagePrefix": "Bitcoin Signed Message:
",
      "pubKeyHash": 0,
      "scriptHash": 5,
      "wif": 128,
    },
    "privateKey": {
      "data": [
        158,
        253,
        210,
        149,
        243,
        182,
        182,
        187,
        202,
        178,
        82,
        36,
        31,
        70,
        42,
        25,
        207,
        79,
        11,
        112,
        73,
        117,
        217,
        187,
        4,
        124,
        224,
        39,
        83,
        178,
        85,
        19,
      ],
      "type": "Buffer",
    },
    "publicKey": {
      "data": [
        3,
        163,
        253,
        194,
        152,
        37,
        193,
        64,
        238,
        223,
        149,
        26,
        26,
        220,
        39,
        206,
        221,
        113,
        224,
        107,
        13,
        160,
        19,
        183,
        137,
        162,
        23,
        31,
        120,
        245,
        247,
        29,
        141,
      ],
      "type": "Buffer",
    },
    "sign": [Function],
    "signSchnorr": [Function],
  },
  "preimage": {
    "data": [
      241,
      108,
      95,
      104,
      10,
      72,
      16,
      45,
      227,
      184,
      81,
      117,
      182,
      174,
      153,
      232,
      116,
      1,
      61,
      213,
      144,
      167,
      197,
      206,
      195,
      217,
      242,
      171,
      169,
      90,
      53,
      76,
    ],
    "type": "Buffer",
  },
  "script": {
    "data": [
      81,
      32,
      117,
      89,
      82,
      37,
      91,
      206,
      80,
      62,
      65,
      239,
      195,
      80,
      69,
      118,
      253,
      182,
      218,
      206,
      49,
      90,
      89,
      119,
      178,
      58,
      227,
      156,
      87,
      46,
      137,
      186,
      158,
      199,
    ],
    "type": "Buffer",
  },
  "swapTree": {
    "claimLeaf": {
      "output": {
        "data": [
          130,
          1,
          32,
          136,
          169,
          20,
          224,
          7,
          37,
          216,
          139,
          47,
          87,
          215,
          227,
          170,
          20,
          111,
          43,
          135,
          47,
          75,
          85,
          180,
          237,
          17,
          136,
          32,
          163,
          253,
          194,
          152,
          37,
          193,
          64,
          238,
          223,
          149,
          26,
          26,
          220,
          39,
          206,
          221,
          113,
          224,
          107,
          13,
          160,
          19,
          183,
          137,
          162,
          23,
          31,
          120,
          245,
          247,
          29,
          141,
          172,
        ],
        "type": "Buffer",
      },
      "version": 192,
    },
    "covenantClaimLeaf": undefined,
    "refundLeaf": {
      "output": {
        "data": [
          32,
          63,
          18,
          229,
          32,
          93,
          17,
          97,
          244,
          228,
          162,
          101,
          193,
          69,
          23,
          59,
          99,
          117,
          52,
          89,
          183,
          145,
          244,
          217,
          27,
          183,
          135,
          207,
          230,
          234,
          12,
          135,
          91,
          173,
          1,
          2,
          177,
        ],
        "type": "Buffer",
      },
      "version": 192,
    },
    "tree": [
      {
        "output": {
          "data": [
            130,
            1,
            32,
            136,
            169,
            20,
            224,
            7,
            37,
            216,
            139,
            47,
            87,
            215,
            227,
            170,
            20,
            111,
            43,
            135,
            47,
            75,
            85,
            180,
            237,
            17,
            136,
            32,
            163,
            253,
            194,
            152,
            37,
            193,
            64,
            238,
            223,
            149,
            26,
            26,
            220,
            39,
            206,
            221,
            113,
            224,
            107,
            13,
            160,
            19,
            183,
            137,
            162,
            23,
            31,
            120,
            245,
            247,
            29,
            141,
            172,
          ],
          "type": "Buffer",
        },
        "version": 192,
      },
      {
        "output": {
          "data": [
            32,
            63,
            18,
            229,
            32,
            93,
            17,
            97,
            244,
            228,
            162,
            101,
            193,
            69,
            23,
            59,
            99,
            117,
            52,
            89,
            183,
            145,
            244,
            217,
            27,
            183,
            135,
            207,
            230,
            234,
            12,
            135,
            91,
            173,
            1,
            2,
            177,
          ],
          "type": "Buffer",
        },
        "version": 192,
      },
    ],
  },
  "txHash": {
    "data": [
      0,
      101,
      109,
      119,
      39,
      202,
      64,
      38,
      17,
      12,
      194,
      138,
      233,
      45,
      135,
      156,
      211,
      208,
      37,
      165,
      170,
      154,
      20,
      167,
      91,
      169,
      162,
      32,
      33,
      145,
      250,
      82,
    ],
    "type": "Buffer",
  },
  "type": 3,
  "value": 100000000,
  "vout": 0,
}
`;

exports[`Core should construct Taproot Chain Swap details (cooperative: true) 1`] = `
{
  "cooperative": true,
  "internalKey": {
    "data": [
      79,
      116,
      188,
      134,
      116,
      226,
      51,
      153,
      148,
      125,
      11,
      1,
      187,
      104,
      52,
      43,
      223,
      18,
      54,
      179,
      21,
      219,
      29,
      205,
      37,
      50,
      50,
      123,
      165,
      233,
      202,
      166,
    ],
    "type": "Buffer",
  },
  "keys": {
    "__D": {
      "data": [
        158,
        253,
        210,
        149,
        243,
        182,
        182,
        187,
        202,
        178,
        82,
        36,
        31,
        70,
        42,
        25,
        207,
        79,
        11,
        112,
        73,
        117,
        217,
        187,
        4,
        124,
        224,
        39,
        83,
        178,
        85,
        19,
      ],
      "type": "Buffer",
    },
    "__DEPTH": 3,
    "__INDEX": 123,
    "__PARENT_FINGERPRINT": 2218617464,
    "__Q": undefined,
    "chainCode": {
      "data": [
        190,
        31,
        180,
        197,
        209,
        71,
        93,
        200,
        76,
        239,
        252,
        202,
        79,
        156,
        220,
        200,
        65,
        114,
        10,
        95,
        78,
        19,
        150,
        68,
        183,
        132,
        23,
        197,
        193,
        63,
        147,
        241,
      ],
      "type": "Buffer",
    },
    "lowR": false,
    "network": {
      "bech32": "bc",
      "bip32": {
        "private": 76066276,
        "public": 76067358,
      },
      "messagePrefix": "Bitcoin Signed Message:
",
      "pubKeyHash": 0,
      "scriptHash": 5,
      "wif": 128,
    },
    "privateKey": {
      "data": [
        158,
        253,
        210,
        149,
        243,
        182,
        182,
        187,
        202,
        178,
        82,
        36,
        31,
        70,
        42,
        25,
        207,
        79,
        11,
        112,
        73,
        117,
        217,
        187,
        4,
        124,
        224,
        39,
        83,
        178,
        85,
        19,
      ],
      "type": "Buffer",
    },
    "publicKey": {
      "data": [
        3,
        163,
        253,
        194,
        152,
        37,
        193,
        64,
        238,
        223,
        149,
        26,
        26,
        220,
        39,
        206,
        221,
        113,
        224,
        107,
        13,
        160,
        19,
        183,
        137,
        162,
        23,
        31,
        120,
        245,
        247,
        29,
        141,
      ],
      "type": "Buffer",
    },
    "sign": [Function],
    "signSchnorr": [Function],
  },
  "preimage": undefined,
  "script": {
    "data": [
      81,
      32,
      117,
      89,
      82,
      37,
      91,
      206,
      80,
      62,
      65,
      239,
      195,
      80,
      69,
      118,
      253,
      182,
      218,
      206,
      49,
      90,
      89,
      119,
      178,
      58,
      227,
      156,
      87,
      46,
      137,
      186,
      158,
      199,
    ],
    "type": "Buffer",
  },
  "swapTree": {
    "claimLeaf": {
      "output": {
        "data": [
          130,
          1,
          32,
          136,
          169,
          20,
          224,
          7,
          37,
          216,
          139,
          47,
          87,
          215,
          227,
          170,
          20,
          111,
          43,
          135,
          47,
          75,
          85,
          180,
          237,
          17,
          136,
          32,
          163,
          253,
          194,
          152,
          37,
          193,
          64,
          238,
          223,
          149,
          26,
          26,
          220,
          39,
          206,
          221,
          113,
          224,
          107,
          13,
          160,
          19,
          183,
          137,
          162,
          23,
          31,
          120,
          245,
          247,
          29,
          141,
          172,
        ],
        "type": "Buffer",
      },
      "version": 192,
    },
    "covenantClaimLeaf": undefined,
    "refundLeaf": {
      "output": {
        "data": [
          32,
          63,
          18,
          229,
          32,
          93,
          17,
          97,
          244,
          228,
          162,
          101,
          193,
          69,
          23,
          59,
          99,
          117,
          52,
          89,
          183,
          145,
          244,
          217,
          27,
          183,
          135,
          207,
          230,
          234,
          12,
          135,
          91,
          173,
          1,
          2,
          177,
        ],
        "type": "Buffer",
      },
      "version": 192,
    },
    "tree": [
      {
        "output": {
          "data": [
            130,
            1,
            32,
            136,
            169,
            20,
            224,
            7,
            37,
            216,
            139,
            47,
            87,
            215,
            227,
            170,
            20,
            111,
            43,
            135,
            47,
            75,
            85,
            180,
            237,
            17,
            136,
            32,
            163,
            253,
            194,
            152,
            37,
            193,
            64,
            238,
            223,
            149,
            26,
            26,
            220,
            39,
            206,
            221,
            113,
            224,
            107,
            13,
            160,
            19,
            183,
            137,
            162,
            23,
            31,
            120,
            245,
            247,
            29,
            141,
            172,
          ],
          "type": "Buffer",
        },
        "version": 192,
      },
      {
        "output": {
          "data": [
            32,
            63,
            18,
            229,
            32,
            93,
            17,
            97,
            244,
            228,
            162,
            101,
            193,
            69,
            23,
            59,
            99,
            117,
            52,
            89,
            183,
            145,
            244,
            217,
            27,
            183,
            135,
            207,
            230,
            234,
            12,
            135,
            91,
            173,
            1,
            2,
            177,
          ],
          "type": "Buffer",
        },
        "version": 192,
      },
    ],
  },
  "txHash": {
    "data": [
      0,
      101,
      109,
      119,
      39,
      202,
      64,
      38,
      17,
      12,
      194,
      138,
      233,
      45,
      135,
      156,
      211,
      208,
      37,
      165,
      170,
      154,
      20,
      167,
      91,
      169,
      162,
      32,
      33,
      145,
      250,
      82,
    ],
    "type": "Buffer",
  },
  "type": 3,
  "value": 100000000,
  "vout": 0,
}
`;

exports[`Core should create Musig 1`] = `
{
  "data": [
    87,
    154,
    31,
    116,
    125,
    206,
    223,
    181,
    56,
    159,
    20,
    192,
    226,
    22,
    37,
    227,
    97,
    252,
    190,
    142,
    233,
    192,
    140,
    221,
    128,
    221,
    96,
    76,
    118,
    96,
    179,
    195,
  ],
  "type": "Buffer",
}
`;

exports[`Core should tweak Musig (liquid: false) 1`] = `
{
  "data": [
    134,
    128,
    242,
    101,
    31,
    54,
    59,
    145,
    216,
    96,
    179,
    41,
    22,
    75,
    0,
    115,
    85,
    178,
    193,
    200,
    250,
    194,
    117,
    88,
    194,
    37,
    92,
    49,
    105,
    243,
    91,
    4,
  ],
  "type": "Buffer",
}
`;

exports[`Core should tweak Musig (liquid: true) 1`] = `
{
  "data": [
    9,
    247,
    149,
    248,
    81,
    130,
    205,
    22,
    53,
    2,
    241,
    64,
    215,
    138,
    228,
    40,
    231,
    22,
    79,
    142,
    169,
    21,
    148,
    3,
    200,
    221,
    32,
    95,
    98,
    129,
    20,
    141,
  ],
  "type": "Buffer",
}
`;
